--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_view_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_view_card.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:tag="@string/dont_touch_me"
+    android:orientation="vertical"
     android:background="@color/white"
     android:layout_height="match_parent">
 
@@ -46,9 +47,8 @@
         android:layout_margin="20dp"
         android:background="@drawable/bottom_border_grey"
         android:layout_marginEnd="20dp"
-        android:layout_below="@id/topRl"
         android:visibility="gone"
-        style="@style/TextMedium"
+        style="@style/TextLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -60,5 +60,5 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
 
