--- a/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
@@ -16,8 +16,8 @@
     -->
 
 
-    <string name="appname">Comelyt Drivers</string>
-    <string name="app_name">Comelyt Drivers</string>
+    <string name="appname">Kardi Drivers</string>
+    <string name="app_name">Kardi Drivers</string>
 
     <!--White Label Key-->
     <string name="white_label_key">3d83f508c28f09ef4ef0c5aaf0d6c636</string>
@@ -26,7 +26,7 @@
     <string name="fugu_app_key_test">kenwfdhwoiujGSDIUUHU82E8HD98</string>
     <string name="images_path">TT Ride Share Driver/TT Ride Share Pictures</string>
     <string name="file_provider">production.ttrideshare.driver.driver.provider</string>
-    <string name="google_maps_api_key">AIzaSyBrU2XQF8xCohlI_zA-ow-yG83HA8DI3FM</string> <!--IMP-->
+    <string name="google_maps_api_key">AIzaSyAYtGKg7n3qVyMYz6FI87998DUbsfX4g1w</string> <!--IMP-->
 
     <string name="facebook_page_id">2056791887904505</string>
     <string name="facebook_page_name">ttrideshare</string>
