--- a/JugnooNewDriver/jugnooNewDriver/src/val/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/val/res/values/values-wl.xml
@@ -72,6 +72,7 @@
     <integer name="show_language_control">@integer/view_gone</integer>
     <integer name="show_call_in_otp">@integer/view_gone</integer>
 
+    <integer name="show_driver_timer">@integer/view_visible</integer>
 
     <!--theme colors-->
     <color name="colorPrimary">#FFFFFF</color>
