--- a/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
@@ -16,15 +16,15 @@
     -->
 
 
-    <string name="appname">TT Rides Share</string>
-    <string name="app_name">TT Rides Share Drivers</string>
+    <string name="appname">TT RideShare</string>
+    <string name="app_name">TT RideShare Drivers</string>
 
     <!--White Label Key-->
     <string name="white_label_key">83ebe9d9d65fdac16460da388822bc38</string>
 
     <string name="fugu_app_key">acd1fc4c36da23e421c9e357785f4d4a</string>
     <string name="fugu_app_key_test">kenwfdhwoiujGSDIUUHU82E8HD98</string>
-    <string name="images_path">TT Ride Share Driver/TT Ride Share Pictures</string>
+    <string name="images_path">TT RideShare Driver/TT RideShare Pictures</string>
     <string name="file_provider">production.ttrideshare.driver.driver.provider</string>
     <string name="google_maps_api_key">AIzaSyBCcnNzpyLi5ND2KKi9MShjWkyRh6c-on4</string> <!--IMP-->
 
@@ -35,7 +35,7 @@
     <drawable name="app_icon">@mipmap/ic_launcher</drawable><!--* IMP-->
     <string name="white_label_name">TT Rideshare</string><!--* IMP-->
     <string name="support_email">support@ttideshare.com</string>
-    <string name="support_email_subject">TT Ride Share Driver Support</string>
+    <string name="support_email_subject">TT RideShare Driver Support</string>
     <string name="support_phone_number">+919023121121</string>
     <string name="customer_app_download_link">https://www.jugnoo.in/</string>
     <string name="hippo_support_faq_name_default">Driver</string>
