--- a/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
@@ -28,7 +28,7 @@
     <string name="google_maps_api_key">AIzaSyAYtGKg7n3qVyMYz6FI87998DUbsfX4g1w</string> <!--IMP-->
 
     <string name="facebook_page_id">2056791887904505</string>
-    <string name="facebook_page_name">kardi</string>
+    <string name="facebook_page_name">kardi.sg</string>
 
     <!--App Level Constants-->
     <drawable name="app_icon">@mipmap/ic_launcher</drawable><!--* IMP-->
