--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/orange_btn_selector.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/orange_btn_selector.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/orange_btn_pressed" android:state_focused="false" android:state_pressed="true"/>
+    <item android:drawable="@drawable/orange_btn_pressed" android:state_enabled="false"/>
     <item android:drawable="@drawable/orange_btn_normal"/>
 
 </selector>
