feat_vehicle_model: Key changes & some more fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_vehicle_model.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_vehicle_model.xml
@@ -35,9 +35,10 @@
             android:focusable="true"
             android:clickable="true"
             android:layout_marginBottom="8dp"
+            android:drawableEnd="@drawable/ic_arrow_down_vector"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_white_rounded_grey_alpha_bordered"
-            android:hint="@string/make"
+            android:hint="@string/hint_make"
             android:padding="13dp"
             android:textDirection="locale"
             app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +66,7 @@
             android:clickable="true"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:drawableEnd="@drawable/ic_arrow_down_vector"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_white_rounded_grey_alpha_bordered"
             android:hint="@string/model"
@@ -97,6 +99,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/background_white_rounded_grey_alpha_bordered"
             android:hint="@string/color"
+            android:drawableEnd="@drawable/ic_arrow_down_vector"
             android:focusable="true"
             android:clickable="true"
             android:padding="13dp"
